<?xml version="1.0"?>
<package>
  <name>lwr_safe_cartesian</name>
  <version>0.0.0</version>
  <description>Translate geometry_msgs/Pose messages (cartesian pose) to sensor_msgs/JointState messages (joint positions) for the KUKA LWR4+ with reachability and static collision checking</description>
  <maintainer email="andreas.bihlmaier@gmx.de">Andreas Bihlmaier</maintainer>
  <license>MIT</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/lwr_safe_cartesian</url> -->


  <author email="andreas.bihlmaier@gmx.de">Andreas Bihlmaier</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ahbstring</build_depend>
  <build_depend>lwr_analytical_kinematics</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>safe_cartesian_moveit</build_depend>
  <build_depend>general_purpose_interpolator</build_depend>
  <build_depend>safe_cartesian_msgs</build_depend>
  <run_depend>ahbstring</run_depend>
  <run_depend>lwr_analytical_kinematics</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>safe_cartesian_moveit</run_depend>
  <run_depend>general_purpose_interpolator</run_depend>
  <run_depend>safe_cartesian_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
